DeveloperOrg/src/objects/Position__c.object
<CustomObject>
    <description>Available Positions in the Company</description>
    <fields>
        <fullName>Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Experience required</description>
        <inlineHelpText>Experience
for 2 years 6 months it would be 2 + 6/12 = 2.5</inlineHelpText>
        <label>Experience</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the Position</description>
        <inlineHelpText>Location of the Position</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <label>Position Type</label>
        <picklist>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Requirements for the position</description>
        <inlineHelpText>Requirements for the position</inlineHelpText>
        <label>Requirements</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Positions</fullName>
        <active>true</active>
        <label>Positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Positions_1</fullName>
        <active>true</active>
        <label>Positions - 1</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Temp_Duration_Validation</fullName>
        <active>true</active>
        <description>We must require that the duration is specified if the position type = Temp</description>
        <errorConditionFormula>AND( ISPICKVAL( Position_Type__c , &quot;Temp&quot;) , NULLVALUE( Duration__c , 0) &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Duration required when Type = “Temp”</errorMessage>
    </validationRules>
</CustomObject>